Added messages to BukkitDependencyHelper